@@ -221,6 +221,7 @@ export GRUB_DEFAULT \
   GRUB_DISABLE_LINUX_RECOVERY \
   GRUB_GFXMODE \
   GRUB_THEME \
+  GRUB_GFXPAYLOAD_LINUX \
   GRUB_DISABLE_OS_PROBER
 
 if test "x${grub_cfg}" != "x"; then
